--- a/cmmsApp/templates/contact_section.html
+++ b/cmmsApp/templates/contact_section.html
@@ -211,7 +211,7 @@
 
                 <p class="cmms-contact-form-loc-phone"><strong>Phone:</strong> +61 (02) 8318 1490</p>
                 <p class="cmms-contact-form-loc-email"><strong>Email: </strong><a
-                        href="mailto:dnaiker@iengaust.com.au">dnaiker@iengaust.com.au </a></p>
+                        href="mailto:enquiries@iengaust.com.au">enquiries@iengaust.com.au</a></p>
                 <p class="cmms-contact-form-loc-address">
                     Warawara Cct, Quakers Hill NSW 2763, Australia
                 </p>
@@ -263,7 +263,7 @@
 
                 <p class="cmms-contact-form-loc-phone"><strong>Phone: </strong>+679 9488589</p>
                 <p class="cmms-contact-form-loc-email"><strong>Email: </strong><a
-                        href="mailto:dnaiker@iengaust.com.au ">dnaiker@iengaust.com.au </a></p>
+                        href="mailto:enquiries@iengaust.com.au">enquiries@iengaust.com.au</a></p>
                 <p class="cmms-contact-form-loc-address">
                     Lot 17, River Drive, Pacific Harbour, Navua, Suva, Fiji.
                 </p>
