--- a/cmmsApp/templates/neplan-contact.html
+++ b/cmmsApp/templates/neplan-contact.html
@@ -147,7 +147,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </p>
             <p class="neplan-locations-email reveal-right">
               <strong>Email:</strong>
-              <a href="mailto:dnaiker@iengaust.com.au">dnaiker@iengaust.com.au</a>
+              <a href="mailto:enquiries@iengaust.com.au">enquiries@iengaust.com.au</a>
             </p>
             <p class="neplan-locations-address reveal-right">
               Warawara Cct, Quakers Hill NSW 2763, Australia
@@ -202,7 +202,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </p>
             <p class="neplan-locations-email reveal-right">
               <strong>Email:</strong>
-              <a href="mailto:dnaiker@iengaust.com.au">dnaiker@iengaust.com.au</a>
+              <a href="mailto:enquiries@iengaust.com.au">enquiries@iengaust.com.au</a>
             </p>
             <p class="neplan-locations-address reveal-right">
               Lot 17, River Drive, Pacific Harbour, Navua, Suva, Fiji.
