--- a/cmmsApp/templates/index.html
+++ b/cmmsApp/templates/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="XGSLab is advanced software for earthing, grounding, lightning protection, and EMF analysis in Australian power systems.">
   <title>XGSLab</title>
   <!--=============== CSS ===============-->
   <link rel="stylesheet" href="{% static 'css/neplan-home.css' %}">
